# overdone

./: .env.template  .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  vite.config.ts
assets/overdone.icon/: icon.json
scripts/: build-and-sign-mac.sh  build-win.ps1  generate-icons.ts  generate-tray-icons.ts  validate-import.ts
scripts/icon-generation/: config.ts  file.ts  prompts.ts  types.ts
src/: App.tsx  main.tsx  tailwind-colors.ts  theme.css  theme.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  windows.json
src-tauri/icons/: icon.icns  icon.macOS.icns
src-tauri/src/: attachments.rs  commands.rs  lib.rs  main.rs  panel.rs  passthrough.rs  platform.rs  scratchpad.rs  storage.rs  transcode.rs  tray.rs  window_state.rs
src/components/: AssigneeAvatar.tsx  AssigneePanel.tsx  AssigneePicker.tsx  CodeBlockNode.tsx  CommentEditor.tsx  DailyReview.tsx  DailyReviewBanner.tsx  DiagramModal.tsx  Filter.tsx  Footer.tsx  IconButton.tsx  ItemContextMenu.tsx  ItemDetails.tsx  LabelBadge.tsx  LabelPicker.tsx  Lists.tsx  Panel.tsx  PanelHost.tsx  PanelRouter.tsx  ReleaseNotes.tsx  ScratchpadConvertMenu.tsx  ScratchpadWindow.tsx  ScrollArea.tsx  Search.tsx  Settings.tsx  StateBox.tsx  StateCheckbox.tsx  StatusPicker.tsx  TabBar.tsx  Titlebar.tsx  TodoItem.tsx  UpdateButton.tsx  UpdatePanel.tsx
src/lib/: assignee.ts  attachment.ts  caret.ts  code-blocks.ts  color-scheme.ts  filters.ts  (+36 more)
(+93 files in other folders)
